Fixed bad vertical layout. Page height percentage was too high.

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -44,74 +44,55 @@ of those sections to manage the look and feel of the site. */
 .intro-section {
     height: 100%;
     padding-top: 150px;
-    padding-bottom: 150px;
     text-align: center;
     background: #fff;
 }
 
 .services-section {
-<<<<<<< HEAD
-    height: 150%;
-    padding-top: 50px;
-    padding-bottom: 150px;
+    padding-top: 150px;
+    padding-bottom: 50px;
     text-align: center;
     background: #eee;
 }
 
 .work-section {
-    /*height: 100%;*/
     padding-top: 150px;
-    padding-bottom: 150px;
+    padding-bottom: 50px;
     text-align: center;
     background: #fff;
 }
 
 .company-section {
-<<<<<<< HEAD
-    height: 100%;
-    padding-top: 100px;
-=======
-    /*height: 100%;*/
     padding-top: 150px;
-    padding-bottom: 150px;
->>>>>>> 5ac5e219c94bc8acaf5553d32be70cd481c52886
+    padding-bottom: 50px;
     text-align: center;
     background: #eee;
 }
 
-.blog-section {
-    /*height: 100%;*/
+/*.blog-section {
     padding-top: 150px;
     padding-bottom: 150px;
     text-align: center;
     background: #fff;
-}
+}*/
 
-
-
-.about-section {
-    height: 100%;
+/*.about-section {
     padding-top: 150px;
-    padding-bottom: 150px;
+    padding-bottom: 50px;
     text-align: center;
     background: #eee;
-}
-
+}*/
 
 .contact-section {
-    height: 100%;
     padding-top: 150px;
-    padding-bottom: 150px;
-    text-align: center;
-    background: #eee;
+    padding-bottom: 50px;
+    text-align: center;*/
+    background: #fff;
 }
 
 #map {
   width: 100%;
   height: 300px;
   margin-top: 10px;
-<<<<<<< HEAD
 }
-=======
-}
->>>>>>> 5ac5e219c94bc8acaf5553d32be70cd481c52886
+
